Fixed mobile issue which caused overlapping text on first div.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@ body, html, header, #intro {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  min-height: 735px;
   -webkit-box-shadow: rgba(35, 35, 50, 0.8) 0px 0px 11px -2px;
   -moz-box-shadow: rgba(35, 35, 50, 0.8) 0px 0px 11px -2px;
   box-shadow: rgba(35, 35, 50, 0.8) 0px 0px 11px -2px;
